--- a/api/.env
+++ b/api/.env
@@ -1,12 +1,16 @@
-# conection data base
 PORT=3000
 JWT_SECRET=7KwVkK_vknBA2Cj-?G%J
+
+
+# conection data base
 DATABASE_TYPE=postgres
-DATABASE_HOST=192.168.57.181
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=qwer1234%
-DATABASE_NAME=db_documentos
+DATABASE_PASSWORD=12345
+DATABASE_NAME=db_almacen
+
+
 DEFAULT_USER_EMAIL=admin
 DEFAULT_USER_PASSWORD=secret
 
