--- a/api/.env
+++ b/api/.env
@@ -1,14 +1,23 @@
 PORT=3000
 JWT_SECRET=7KwVkK_vknBA2Cj-?G%J
 
-
-# conection data base
+#CONEXION TRABAJO
 DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
+DATABASE_HOST=192.168.57.181
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=12345
-DATABASE_NAME=db_almacen
+DATABASE_PASSWORD=qwer1234%
+DATABASE_NAME=db_documentos
+
+
+
+# conection data base
+#DATABASE_TYPE=postgres
+#DATABASE_HOST=localhost
+#DATABASE_PORT=5432
+#DATABASE_USERNAME=postgres
+#DATABASE_PASSWORD=12345
+#DATABASE_NAME=db_almacen
 
 
 DEFAULT_USER_EMAIL=admin
