--- a/api/.env
+++ b/api/.env
@@ -7,7 +7,7 @@ DATABASE_HOST=192.168.57.181
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=qwer1234%
-DATABASE_NAME=db_documentos
+DATABASE_NAME=db_base
 
 
 
